  * GIG SOUND FORMAT EXTENSION: Support for additional filter types:
    lowpass 1/2/4/6-pole, highpass 1/2/4/6-pole, bandpass 2-pole,
    bandreject 2-pole.
  * Combine Tool: Fixed user's selection set reduction not being reflected
    correctly as it supposed to.
  * Fix: dimregion edit actions were ignored if user did not click (ever) on
    any dimension zone yet.

Version 1.1.1 (2019-07-27)

  * Script Editor: Fixed some minor issues with vertical line number bar
    (which was editable, selectable and incorrectly displayed on new scripts).
  * Translation Fix: MacroEditor.cpp and MacrosSetup.cpp were not under
    translation control.
  * Spelling fixes (patch provided by Debian maintainer Jaromír Mikeš).
  * Added new main menu item "View" -> "Tooltips for Beginners" which allows
    to disable tooltips intended for newbies only (default: on).
  * Extended support for keyboard function keys up to F19.
  * List assigned scripts as colored tooltip when hovering mouse over the
    "Scripts" column in the instruments list.
  * Added global keyboard accelerator Shift + Backspace for dropping all script
    slots from an instrument.
  * Added option to save as gig v4 file (File -> Properties).
  * Fixed duplicate items in File -> Properties -> "File Format" combo box.
  * GIG SOUND FORMAT EXTENSION: Added combo box "Sustain Release Trigger" which
    can be used to optionally play release trigger samples on sustain pedal up.
  * GIG SOUND FORMAT EXTENSION: Added check box "No note-off release trigger"
    which allows to disable release trigger samples on regular MIDI note-off.
  * Fixed compiler errors with Gtk 3.24.x (patch by Miroslav Šulc).
  * Fixed some compiler warnings
  * Avoid non-standard offsetof usage (to get rid of gcc warnings)
  * Use GDK Seat API if available to grab pointer
  * Improve version checks for pangomm
  * Fix the instrument list tooltip handling so it doesn't generate
    GTK assertion error messages