@@ -1,6 +1,6 @@
 /*
-    Copyright (c) 2014-2019 Christian Schoenebeck
-    
+    Copyright (c) 2014-2020 Christian Schoenebeck
+
     This file is part of "gigedit" and released under the terms of the
     GNU General Public License version 2.
 */
@@ -88,6 +88,7 @@ Settings::Settings() : Glib::ObjectBase(typeid(Settings)),
     autoRestoreWindowDimension(*this, GLOBAL, "autoRestoreWindowDimension", false),
     saveWithTemporaryFile(*this, GLOBAL, "saveWithTemporaryFile", false),
     showTooltips(*this, GLOBAL, "showNewbieTooltips", true),
+    instrumentDoubleClickOpensProps(*this, GLOBAL, "openInstrPropsByDoubleClick", true),
     mainWindowX(*this, MAIN_WINDOW, "x", -1),
     mainWindowY(*this, MAIN_WINDOW, "y", -1),
     mainWindowW(*this, MAIN_WINDOW, "w", -1),
@@ -145,6 +146,7 @@ Settings::Settings() : Glib::ObjectBase(typeid(Settings)),
     m_boolProps.push_back(&autoRestoreWindowDimension);
     m_boolProps.push_back(&saveWithTemporaryFile);
     m_boolProps.push_back(&showTooltips);
+    m_boolProps.push_back(&instrumentDoubleClickOpensProps);
     m_intProps.push_back(&mainWindowX);
     m_intProps.push_back(&mainWindowY);
     m_intProps.push_back(&mainWindowW);
